# mlx-llm-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  bench  data.json  ifeval_validators.json  leaderboard.csv  leaderboard.json  models.json  pyproject.toml
src/mlx_llm_bench/: __init__.py  cli.py  rescore.py  runner.py  utils.py
tests/: test_scoring.py
