[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-llm-bench"
version = "0.1.0"
description = "Local LLM classification benchmark for Apple Silicon Macs with limited unified memory (e.g. 16GB Mac mini)."
authors = [{ name = "Aman", url = "https://amankumar.ai" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "benchmark", "mlx", "apple-silicon", "local-ai", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.31"]
vlm = ["mlx-vlm>=0.5"]

[project.scripts]
mlx-llm-bench = "mlx_llm_bench.cli:main"

[project.urls]
Homepage = "https://amankumar.ai"

[tool.setuptools.packages.find]
where = ["src"]
