[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-llm-bench"
version = "0.1.0"
description = "Local LLM classification benchmark for Apple Silicon Macs with limited unified memory (e.g. 16GB Mac mini)."
authors = [{ name = "Aman" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "benchmark", "mlx", "apple-silicon", "local-ai", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.20",
]

# MLX dep ranges are pinned to the bands the bench was validated against.
# Notable: mlx-lm 0.31.3 has a Gemma 4 E4B loading regression (issue #1242);
# we run via mlx-vlm for that model. Until the upstream fix lands, do not
# upgrade past 0.32 without re-validating the Gemma 4 row.
[project.optional-dependencies]
mlx = ["mlx-lm>=0.31,<0.33"]
vlm = ["mlx-vlm>=0.5,<0.7"]
dev = ["pytest>=7.0"]

[project.scripts]
mlx-llm-bench = "mlx_llm_bench.cli:main"

[project.urls]
Homepage = "https://amankumar.ai"

[tool.setuptools.packages.find]
where = ["src"]
